[package]
name = "termrect"
version = "0.1.0"
authors = ["Matt Peterson <ricochet1k@gmail.com>"]
repository = "https://github.com/ricochet1k/termrect"
description = "Abstract representation of a styled rectangle of characters"
license = "MIT"
keywords = ["terminal", "tui"]
readme = "README.md"

[dependencies]
bitfield = "0.13"
termion = "^1.5.1"
unicode-width = "~0"
